Fix alignment for smaller devices

--- a/src/EA.Weee.Web/Content/weee/_tables.scss
+++ b/src/EA.Weee.Web/Content/weee/_tables.scss
@@ -84,6 +84,7 @@
         position: relative;
         padding-left: 50%;
         min-height: 20px;
+        text-align: right;
     }
 
     .prsd-table-collapse-cell:before {
@@ -94,6 +95,7 @@
         width: 45%;
         white-space: nowrap;
         padding: 10px 20px 10px 0;
+        text-align: left;
     }
 }
 
